apps/media/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  labels:
    app: kavita
    part-of: media
spec:
  selector:
    app: kavita
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: kavita
